tests/fixtures/invalid/pow_none_list_none.py
# Cannot call pow() with None, List[int], None
x = pow(None, [1, 2, 3], None)
